# WolfEngine-2.0

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  TODO.md  Wolf Engine 2.0.sln  build.gradle  build_android_all.bat  build_android_all.sh  compileData.scor  compileData.scor.incl  compileData.scor.t0000  msvc_build.bat  settings.gradle  shell.nix
Common/: Android.mk  CMakeLists.txt  CPUMemoryDebug.h  Common.cmake  Common.vcxproj  Common.vcxproj.filters  Configuration.cpp  Configuration.h  Debug.cpp  Debug.h  GPUMemoryAllocatorInterface.h  GPUMemoryDebug.h  GraphicTestCommon.h  ResourceNonOwner.h  ResourceReference.h  ResourceUniqueOwner.h  RuntimeContext.cpp  RuntimeContext.h  compile_android.bat  compile_android.sh  graphicTests.bat  integration_rest_API.py
Common/x64/Debug/: Common.exe.recipe
ComputePass/: CMakeLists.txt  UniquePass.cpp  UniquePass.h  main.cpp
ComputePass/Shaders/: shader.comp
GenerateCodeFileHashes/: CMakeLists.txt  GenerateCodeFileHashes.vcxproj  main.cpp
GraphicAPIBroker/: AndroidVulkan.mk  AndroidVulkan1_1.mk  AndroidVulkan1_3.mk  CMakeLists.txt  Graphic API Broker.vcxproj  Graphic API Broker.vcxproj.filters  GraphicAPIBroker_Vulkan.cmake  compile_android_vulkan.bat  compile_android_vulkan_1_1.bat  compile_android_vulkan_1_3.bat  compile_android_vulkan_1_3.sh
GraphicAPIBroker/Private/Vulkan/: AccelerationStructureVulkan.cpp  AccelerationStructureVulkan.h  AccessFlagsVulkan.h  BottomLevelAccelerationStructureVulkan.cpp  BottomLevelAccelerationStructureVulkan.h  BufferVulkan.cpp  BufferVulkan.h  CommandBufferVulkan.cpp  CommandBufferVulkan.h  CommandPool.cpp  CommandPool.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayoutVulkan.cpp  DescriptorSetLayoutVulkan.h  DescriptorSetVulkan.cpp  DescriptorSetVulkan.h  FenceVulkan.cpp  FenceVulkan.h  FormatsVulkan.h  FrameBufferVulkan.cpp  FrameBufferVulkan.h  ImageLayoutVulkan.h  ImageVulkan.cpp  ImageVulkan.h  PipelineStagesVulkan.h  PipelineVulkan.cpp  PipelineVulkan.h  RayTracingSymbols.cpp  RenderPassVulkan.cpp  RenderPassVulkan.h  SamplerVulkan.cpp  SamplerVulkan.h  SemaphoreTracker.cpp  SemaphoreTracker.h  SemaphoreVulkan.cpp  SemaphoreVulkan.h  ShaderStagesVulkan.h  ShadingRateSymbols.h  SwapChainVulkan.cpp  (+7 more)
GraphicAPIBroker/Public/: AccessFlags.h  Attachment.h  BottomLevelAccelerationStructure.cpp  BottomLevelAccelerationStructure.h  Buffer.cpp  Buffer.h  ClearValue.h  CommandBuffer.cpp  CommandBuffer.h  DescriptorLayout.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Enums.h  Extents.h  Fence.cpp  Fence.h  Formats.h  FrameBuffer.cpp  FrameBuffer.h  GPUSemaphore.cpp  GPUSemaphore.h  GraphicAPIManager.cpp  GraphicAPIManager.h  Image.cpp  Image.h  ImageLayout.h  ImageView.h  Pipeline.cpp  Pipeline.h  RayTracingShaderGroupCreateInfo.h  ReadableBuffer.cpp  ReadableBuffer.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  Sampler.h  Semaphore.cpp  Semaphore.h  (+11 more)
Hello Triangle/: CMakeLists.txt  Hello Triangle.vcxproj  UniquePass.cpp  UniquePass.h  graphicTest.bat  main.cpp
Hello Triangle/Shaders/: shader.frag  shader.vert  shaderVert.spv
Hello Triangle/config/: config.ini
Hello Triangle/x64/Debug/: Buffer.cpp.obj.dt.d.json  Buffer.cpp.obj.dt.module.json.command  Hello Triangle.exe.recipe  UniquePass.cpp.obj.dt.d.json  UniquePass.cpp.obj.dt.module.json.command  UniquePass.h_FB7C480081BACFFA.ifc.dt.d.json  UniquePass.h_FB7C480081BACFFA.ifc.dt.module.json  UniquePass.h_FB7C480081BACFFA.ifc.dt.module.json.command  Vertex2D.h_FD2BE6A10438C1CC.ifc.dt.d.json  Vertex2D.h_FD2BE6A10438C1CC.ifc.dt.module.json  Vertex2D.h_FD2BE6A10438C1CC.ifc.dt.module.json.command  iostream_254457073576656B.ifc.dt.command  iostream_254457073576656B.ifc.dt.d.json  iostream_254457073576656B.ifc.dt.module.json.command  iostream_254457073576656B.ifc.isense.dt.command  main.cpp.obj.dt.d.json  main.cpp.obj.dt.module.json  main.cpp.obj.dt.module.json.command  uniquepass.cpp.module.json  vc143.idb
HelloTriangle/: CMakeLists.txt  UniquePass.cpp  UniquePass.h  Vertex2D.h  main.cpp
HelloTriangle/Shaders/: shader.frag
VariableRateShading/: CMakeLists.txt  UniquePass.cpp  UniquePass.h  Vertex2DTextured.h  main.cpp
Wolf Engine 2.0/: AABB.h  AccelerationStructure.cpp  AccelerationStructure.h  Android.mk  AndroidCacheHelper.cpp  AndroidCacheHelper.h  AndroidVulkan.mk  Attachment.h  BindlessDescriptor.cpp  BindlessDescriptor.h  BottomLevelAccelerationStructure.cpp  BottomLevelAccelerationStructure.h  BoundingSphere.cpp  BoundingSphere.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.glsl  CameraInterface.cpp  CameraInterface.h  CameraList.cpp  CameraList.h  CodeFileHashes.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  CommandRecordBase.cpp  CommandRecordBase.h  Configuration.cpp  Configuration.h  ConfigurationHelper.cpp  ConfigurationHelper.h  DAEImporter.cpp  DAEImporter.h  Debug.cpp  Debug.h  DebugMarker.cpp  DebugMarker.h  DebugMarkerSymbols.cpp  (+129 more)
Wolf Engine 2.0/x64/Debug/: Attachment.h_519DF86434834717.ifc.dt.d.json  Attachment.h_519DF86434834717.ifc.dt.module.json  Attachment.h_519DF86434834717.ifc.dt.module.json.command  Buffer.cpp.obj.dt.module.json.command  Buffer.h_6C2925DC9F1C070.ifc.dt.d.json  Buffer.h_6C2925DC9F1C070.ifc.dt.module.json  Buffer.h_6C2925DC9F1C070.ifc.dt.module.json.command  CameraInterface.cpp.obj.dt.module.json.command  CameraInterface.h_BE93F428F093735C.ifc.dt.d.json  CameraInterface.h_BE93F428F093735C.ifc.dt.module.json  CameraInterface.h_BE93F428F093735C.ifc.dt.module.json.command  CommandBuffer.cpp.obj.dt.d.json  CommandBuffer.cpp.obj.dt.module.json.command  CommandBuffer.h_BA687CA27D2E0405.ifc.dt.d.json  CommandBuffer.h_BA687CA27D2E0405.ifc.dt.module.json  CommandBuffer.h_BA687CA27D2E0405.ifc.dt.module.json.command  CommandPool.cpp.obj.dt.module.json  CommandPool.cpp.obj.dt.module.json.command  CommandPool.h_36C08BF8D960A68D.ifc.dt.d.json  CommandPool.h_36C08BF8D960A68D.ifc.dt.module.json  CommandPool.h_36C08BF8D960A68D.ifc.dt.module.json.command  Configuration.cpp.obj.dt.module.json  Configuration.cpp.obj.dt.module.json.command  (+365 more)
(+205 files in other folders)
